F&GDEV/src/objects/IT_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Current_Target_Date__c</fullName>
        <label>Current Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Withdrawn__c</fullName>
        <label>Date Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Initiative_Description__c</fullName>
        <label>IT Initiative Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Initiative__c</fullName>
        <label>IT Initiative</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IT Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IT_Initiative__c</columns>
        <columns>IT_Initiative_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Target_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>IT Initiative Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>